<resources>
    <string name="app_name">TinyBlog</string>
    <string name="str_default_num">0</string>
    <string name="str_app_name">TinyBlog</string>
    <string name="str_app_version">轻博客 - 1.0.2</string>
    <string name="str_is_down">—————— 已经到底了 ——————</string>
    <string name="str_input_title">请输入标题...</string>
    <string name="str_input_comment">写下你的评论</string>
    <string name="str_i_have_down">————我可是有底线的————</string>
    <string name="str_zhihu_ribao">知乎日报</string>
    <string name="str_zhihu_slogan">每日精选知乎资讯，满足你的好奇心</string>
    <string name="str_github_trending">Github Trending</string>
    <string name="str_github_slogan">Github 上关于 Java 的每日热门开源库</string>
    <string name="str_other_find">其他栏目</string>
    <string name="str_other_slogan">正在添加其他发现，敬请期待</string>
    <string name="str_me_slogan">在能驾驭的领域，做个自由的行者</string>
    <string name="str_build_web">建站</string>
    <string name="str_web_admin">管理员</string>
    <string name="str_me_collect">收藏</string>
    <string name="str_me_draft">草稿</string>
    <string name="str_me_resume">个人简历</string>
    <string name="str_support">开源支持</string>
    <string name="str_about_app">关于软件</string>
    <string name="str_same_cate">相关分类</string>
    <string name="str_same_tag">相关标签</string>
    <string name="str_menu_save">保存</string>
    <string name="str_menu_send">发布</string>
    <string name="str_menu_all_nocollect">全部取消收藏</string>
    <string name="str_menu_refresh">刷新</string>
    <string name="str_menu_nodraft">清空草稿箱</string>
    <string name="str_menu_comment">评论</string>
    <string name="str_menu_sys_browse">系统浏览器</string>
</resources>
