<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/md_blue_400"
        android:elevation="5dp">

        <TextView
            android:id="@+id/tv_find_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/ib_find_ask"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/svg_ask" />

    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.CardView
        android:id="@+id/cv_find_zhihu"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_find_zhihu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="zhihu"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_find_zhihu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_zhihu_ribao"
                android:textColor="@color/md_white_1000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_find_zhihu"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/str_zhihu_slogan"
                android:textColor="@color/md_white_1000"
                android:textSize="12sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_find_github"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_find_github"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:transitionName="github" />

            <TextView
                android:id="@+id/tv_find_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_github_trending"
                android:textColor="@color/md_white_1000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_find_github"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/str_github_slogan"
                android:textColor="@color/md_white_1000"
                android:textSize="12sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_find_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_find_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_other_find"
                android:textColor="@color/md_white_1000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_find_other"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/str_other_slogan"
                android:textColor="@color/md_white_1000"
                android:textSize="12sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>