<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_me_one"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="140dp"
    android:background="@color/md_white_1000"
    android:elevation="3dp">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_me_web"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_me_web_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:src="@drawable/svg_web" />

            <TextView
                android:id="@+id/tv_me_web_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me_web_time"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/md_grey_900"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="@string/str_build_web"
                android:textColor="@color/md_grey_500"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_me_admin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_me_admin"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:src="@drawable/svg_admin" />

            <TextView
                android:id="@+id/tv_me_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me_admin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/md_grey_900"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="@string/str_web_admin"
                android:textColor="@color/md_grey_500"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_me_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_me_collect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:src="@drawable/svg_collect" />

            <TextView
                android:id="@+id/tv_me_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me_collect"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/md_grey_900"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="@string/str_me_collect"
                android:textColor="@color/md_grey_500"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_me_draft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_me_draft"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:src="@drawable/svg_dauft" />

            <TextView
                android:id="@+id/tv_me_draft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me_draft"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/md_grey_900"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:text="@string/str_me_draft"
                android:textColor="@color/md_grey_500"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>